Changed section image

--- a/sub/intro_05.html
+++ b/sub/intro_05.html
@@ -255,7 +255,7 @@
       <section id="evt2">
         <div class="inner">
           <div class="evt_tit">
-            <img src="../images/logo_img.png" alt="로고이미지">
+            <img src="../images/oxquiz.jpg" alt="로고이미지">
             <h2>OX퀴즈</h2>
           </div>
 
