--- a/sub/intro_05.html
+++ b/sub/intro_05.html
@@ -255,14 +255,14 @@
       <section id="evt2">
         <div class="inner">
           <div class="evt_tit">
-            <img src="../images/oxquiz.jpg" alt="로고이미지">
+            <img src="../images/logo_img.png" alt="로고이미지">
             <h2>OX퀴즈</h2>
           </div>
 
           <div class="evt2_intro">
             <ul class="evt2_right">
               <li>
-                <img src="../images/ox evt.jpg" alt="">
+                <img src="../images/oxquiz.jpg" alt="">
               </li>
             </ul>
             <ul class="evt2_left">
